<resources>
    <string name="app_name">ThirdEye CheckList</string>
    <string name="name_hint">name</string>
    <string name="logout">logout</string>
    <string name="version_number">"version: "</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="from_scratch">from scratch</string>
    <string name="from_template">from template</string>
    <string name="login">Login</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="loading">loading</string>
    <string name="must_enter_phone">you must enter phone</string>
    <string name="must_enter_password">you must enter password</string>
    <string name="phone_is_not_correct">your phone no is not correct</string>
    <string name="assign_later">assign later</string>
    <string name="assign_now">assign now</string>
    <string name="assign_to">assign to</string>
    <string name="due_date_holiday">due date holiday</string>
    <string name="if_checklist_shifted_to_another_day_and_the_next_dates_are_already_due_cancel_previous_checklist">If checklist shifted to another day, and the next dates are already due, cancel previous checklist</string>
    <string name="start_date">start date</string>
    <string name="checklist_repetition">CheckList repetition</string>
    <string name="repeat_once">repeat once</string>
    <string name="repeat_every">repeat every</string>
    <string name="repetition_every">Repetition every</string>
    <string name="repetition_unit">Repetition unit</string>
    <string name="notify_user_before">Notify User Before</string>
    <string name="notify_before">notify before</string>
    <string name="notify_unit">notify unit</string>
    <string name="expire_after">expire after</string>
    <string name="expire_unit">expire unit</string>
    <string name="add">add</string>
    <string name="add_new_checklist">add new checklist</string>
    <string name="checklists">CheckLists</string>
    <string name="working_hours">working hours</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="must_enter_name">you must enter the name</string>
    <string name="must_assing_to_user">you must assign one user at least</string>
    <string name="must_choose">you must choose</string>
    <string name="must_enter_start_date">you must enter start date</string>
    <string name="start_time">start time</string>
    <string name="changeLaguage">Arabic</string>
    <string name="show_last_status">Show last status</string>
    <string name="active">active</string>
    <string name="force_answer">force answer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_page">Add New Page</string>
    <string name="pages">pages</string>
    <string name="image">images</string>
    <string name="comments">comments</string>
    <string name="type">type</string>
    <string name="total_score">total score</string>
    <string name="comment">comment</string>
    <string name="score">score</string>
    <string name="add_new_task">add new task</string>
    <string name="tasks">tasks</string>
    <string name="you_didn_t_make_any_checklist_before">you didn\'t make any checklist before</string>
    <string name="choice">choice</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="maybe">maybe</string>
    <string name="must_enter_choice">you must enter at least 2 choices</string>
    <string name="delete">delete</string>
    <string name="sure_to_delete">are you sure to delete this?</string>
    <string name="open_splash">open splash</string>
    <string name="edit">edit</string>
    <string name="sure_to_edit">Are you sure to edit?</string>
    <string name="sure_to_submit_edit">are you sure to submit edit</string>
    <string name="submit">submit</string>
    <string name="exit">exit</string>
    <string name="sure_to_exit">are you sure to exit?</string>
    <string name="done">done</string>
    <string name="country">country</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="create_subuser">create subuser</string>
    <string name="self_evaluation">self evaluation</string>
    <string name="add_new_user">add new user</string>
    <string name="users">users</string>
    <string name="must_enter_email">enter email</string>
    <string name="password_not_match">password not match</string>
    <string name="cannot_delete">cannot delete ,  try again</string>
    <string name="you_did_not_have_any_checklist">you didnt have any checklist_</string>
    <string name="mo_pages">this checklist dose not have pages yet</string>
    <string name="mo_tasks">this page dose not have any tasks yet</string>
    <string name="error">Error, please try again.</string>
</resources>
