<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.addUser.UsersFragment">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/add_task_hint_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/add_new_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/name_type_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_task_hint_tv"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_name_il"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/_4sdp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/_12sdp"
                            android:hint="@string/name_hint" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/country_il"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/country_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:editable="false"
                            android:focusable="false"
                            android:clickable="true"
                            android:hint="@string/country" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/total_score_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_layout"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <CheckBox
                        android:id="@+id/create_subUser_cp"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/_4sdp"
                        android:text="@string/create_subuser"
                        android:textSize="@dimen/_10sdp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

                    <CheckBox
                        android:id="@+id/self_evaluation_cp"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/_4sdp"
                        android:text="@string/self_evaluation"
                        android:textSize="@dimen/_10sdp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

                    <CheckBox
                        android:id="@+id/active_cp"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/_4sdp"
                        android:text="@string/active"
                        android:textSize="@dimen/_10sdp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phone_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_type_layout"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_phone_il"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/_4sdp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/_12sdp"
                            android:editable="true"
                            android:clickable="true"
                            android:inputType="phone"
                            android:focusable="true"
                            android:hint="@string/phone" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_email_il"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_email_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/_12sdp"
                            android:editable="true"
                            android:clickable="true"
                            android:focusable="true"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_email_layout"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_il"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/_4sdp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/_12sdp"
                            android:editable="true"
                            android:clickable="true"
                            android:inputType="phone"
                            android:focusable="true"
                            android:hint="@string/password" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_il"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirm_password_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/_12sdp"
                            android:editable="true"
                            android:clickable="true"
                            android:focusable="true"
                            android:inputType="textEmailAddress"
                            android:hint="@string/confirm_password" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <Button
                    android:id="@+id/add_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_user"
                    app:layout_constraintTop_toBottomOf="@id/total_score_layout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView"
            app:layout_constraintVertical_bias="0.56" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/lato_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/users"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_cardview"
            app:layout_constraintVertical_bias="0.018" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            shimmer:duration="800"
            tools:layout_editor_absoluteX="-25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/page_item_shimmer" />

                <include layout="@layout/page_item_shimmer" />

                <include layout="@layout/page_item_shimmer" />

                <include layout="@layout/page_item_shimmer" />

                <include layout="@layout/page_item_shimmer" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/users_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="-25dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>